--- a/Core/appsettings.json
+++ b/Core/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DbConnection": "Server=LAPTOP-2H31453H\\SQLEXPRESS;Database=CoreDB;Trusted_Connection=True;"
+    }
 }
